--- a/loginform/src/pages/Home.css
+++ b/loginform/src/pages/Home.css
@@ -12,11 +12,14 @@
 
 #root {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+   /*  height: 100vh; */
     background-color: rgb(225, 233, 233);
+    flex-wrap: wrap;
+    gap: 10px;
+    
 }
 
 .container {
@@ -30,6 +33,7 @@
     border-radius: 10px;
     box-shadow: inset 3px 3px 2px white;
     transition: background-color 0.3s;
+    padding: 5px;
 }
 
 .container:hover {
@@ -48,6 +52,7 @@
 h1 {
     margin-top: 5px;
     color: white;
+    font-family: 'alice';
 }
 
 h2 {
@@ -73,12 +78,16 @@ P {
     padding: 8px;
     font-size: 16px;
     border: none;
+    color:black;
 }
 
 .follow {
     padding: 8px;
     font-size: 16px;
     border: none;
+    border: 2px solid rgb(74, 176, 231);
+    color: white;
+    background-color: transparent;
 }
 
 .message:hover {
@@ -99,11 +108,11 @@ li{
     margin: 5px;
     padding: 5px;
     color: white;
+    font-size: 13px;
 
 }
 .PARA{
     font-size: 12px;
     font-weight: bold;
     margin-top:22px;
-    text-align: left;
 }
